<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<groupId>io.github.hooj0</groupId>
	<artifactId>fabric-sdk-commons</artifactId>
	<version>1.1.2</version>
	<modelVersion>4.0.0</modelVersion>
	
	<name>Hyperledger fabric java sdk commons</name>
	<description>Hyperledger fabric java sdk assembly of public, core functional methods, providing further calls to other frameworks.</description>
	<url>https://github.com/hooj0/fabric-sdk-java-commons</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<name>Hyperledger fabric java sdk commons Developers</name>
			<email>hoojo_@126.com</email>
		</developer>
	</developers>
	
	<scm>
		<connection>scm:git:github.com/hooj0/fabric-sdk-java-commons.git</connection>
		<developerConnection>scm:git:github.com/hooj0/fabric-sdk-java-commons.git</developerConnection>
		<url>https://github.com/hooj0/fabric-sdk-java-commons.git</url>
	</scm>
	
	<properties>
		<!--
		@changelog Add jar `dependencies` version properties  
		-->

		<!-- compiler -->
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- test -->
		<junit.version>4.12</junit.version>
		<httpclient.version>4.5.5</httpclient.version>
		
		<!-- Logging -->
		<logback.version>1.0.13</logback.version>
		
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.19</slf4j.version>
		
		<!-- runtime -->
		<commons-lang3.version>3.7</commons-lang3.version>
		<guava.version>25.1-jre</guava.version>

		<!-- fabric sdk -->		
		<fabric-sdk-java.version>1.1.0</fabric-sdk-java.version>

		<!-- lombok -->
		<lombok.version>1.18.0</lombok.version>
	</properties>

	<dependencies>
		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Logging with SLF4J & LogBack -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>		

		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>${httpclient.version}</version>
            <scope>test</scope>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.hyperledger.fabric-sdk-java/fabric-sdk-java -->
		<dependency>
			<groupId>org.hyperledger.fabric-sdk-java</groupId>
			<artifactId>fabric-sdk-java</artifactId>
			<version>${fabric-sdk-java.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <version>${lombok.version}</version>
		    <scope>provided</scope>
		</dependency>
		
	</dependencies>
	
	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.properties</include>
				</includes>
				<excludes>
					<exclude>test/**</exclude>
				</excludes>
			</resource>
		</resources>
		
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.0.0</version>
				<configuration>
					<addOutputDirectory>false</addOutputDirectory>
					<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<distributionManagement>
	    <repository>
	        <id>releases</id>
	        <url>http://maven.masget.com:7078/nexus/content/repositories/releases/</url>
	    </repository>
	
	    <snapshotRepository>
	        <id>Snapshots</id>
	        <url>http://maven.masget.com:7078/nexus/content/repositories/snapshots/</url>
	    </snapshotRepository>
	</distributionManagement>
</project>